# ComfyUI-Sokes-Nodes

./: LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  sokes_color_maps.py  sokes_nodes.py
web/js/: hex_to_color_name_sokes.js  sokes.js
