[project]
name = "comfyui-sokes-nodes"
description = "Nodes: Empty Latent Randomizer (9 Inputs)"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/m-sokes/ComfyUI-Sokes-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Sokes-Nodes"
Icon = ""
